# ghostpost

./: README.md  db.sqlite3  pyproject.toml
ghostpost/: settings.py  urls.py
ghostpost.egg-info/: PKG-INFO  requires.txt
posts/: .gitignore  admin.py  forms.py  helpers.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_ghostpost_boast.py  0002_ghostpost_datetime.py  0003_filter.py  0004_auto_20200516_0203.py  0005_auto_20200516_0218.py
posts/static/css/: index.css
posts/templates/: base.html  ghostpost_detail.html  index.html
